Fixed Header on mobile browsers and improved marquee

--- a/src/sass/content/footer.scss
+++ b/src/sass/content/footer.scss
@@ -124,7 +124,7 @@ $square-size: 2.5rem;
 
   &__marquee {
     z-index: 1;
-    color: $color-dark;
+    color: $color-black;
     font-size: 1.3rem;
     background-color: $color-accent;
 
@@ -135,8 +135,22 @@ $square-size: 2.5rem;
     a,
     a:link,
     a:visited {
-      color: $color-dark;
+      color: $color-black;
       text-decoration: none;
+    }
+  }
+
+  &__marquee-item {
+    position: relative;
+    margin-right: 2rem;
+
+    &:not(:last-child) {
+      &::after {
+        position: relative;
+        left: 1rem;
+        color: $color-white;
+        content: '/';
+      }
     }
   }
 
