--- a/src/sass/content/header.scss
+++ b/src/sass/content/header.scss
@@ -32,7 +32,7 @@
     text-align: center;
     color: $color-white;
     backface-visibility: hidden;
-    margin: 0 3rem;
+    padding: 0 2rem;
   }
 
   &__arrow-down {
@@ -123,12 +123,13 @@
 .typewriter-container {
   position: absolute;
   left: 0;
-  width: 98%;
+  width: 100%;
   display: inline-block;
 
   text-align: center;
   font-size: 3rem;
   font-weight: 300;
+  padding: 0 2rem;
   margin: 3rem auto;
 
   @include respond(phone) {
